<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/discoveryMenuView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".control.VirtualCardsActivity">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="back"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
...
